# workspace_zero

./: .gitignore
abc_project/: pyproject.toml  requirements.txt  setup.py
abc_project/abcapp/: module_app.py
abc_project/abcapp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
abc_project/data/: init_db.py
abc_project/tests/: test_abc_dummy.py  test_db.py
glob-utils/: pyproject.toml
glob-utils/glob_utils/: helpers.py
glob-utils/tests/: test_env.py
glob_utils/: pyproject.toml
glob_utils/glob_utils/: helpers.py
glob_utils/glob_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
proj-abc/: README.md  pyproject.toml
proj-abc/src/abc_app/: database.py  module_app.py
proj-abc/src/abc_app/utils/: my_useful.py
proj-abc/tests/: test_abc_dummy.py  test_db.py
proj-xyz/: pyproject.toml
proj-xyz/src/xyz_app/: module_xyz.py
proj-xyz/tests/: test_xyz_dummy.py
xyz_project/: .gitignore  README.md  pyproject.toml
xyz_project/tests/: test_xyz_dummy.py
xyz_project/xyz_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
