[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xyz_app"           # <--- package name (must match folder)
version = "0.1.0"
description = "My XYZ application"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = []        # e.g. ["requests"]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["xyz_app"]
